Chore(Updated scripts in package.json & settings in settings.json)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,7 +45,8 @@
         "**/.D3V/**/*": true
     },
     "conventionalCommits.scopes": [
-        "Color Class"
+        "Color Class",
+        "VS Code Config"
     ],
 
 }
