chore(TSC): :fire: Cleaned up the proj's tsconig.json file by swapping some props, formatting the doc, & removing unnesccary mod resolution support
Included in the tsconfig clean up was the removal of the "files" property, as the files list was getting long. I added the much more tidy includes property. Also I added an excludes property as a safe guard if any proj structure or include/exclude settings change in the fututre. Removed the config for supporting "Json as a module resolution", the project doesn't use it, and will likely never use it. Formatted the document as well.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,39 +2,18 @@
    "$schema": "https://json.schemastore.org/tsconfig",
    "extends": "@tsconfig/node16-strictest/tsconfig.json",
 
-   "files": [
-      // MAIN
-      "src/main.ts",
-
-      // API
-      "src/api/hex.ts",
-      "src/api/hsv.ts",
-      "src/api/color.ts",
-
-      // TESTS
-      "src/test/hex.test.ts",
-      "src/test/hsv.test.ts"
-   ],
+   "include": ["src/**/*"],
+   "exclude": [ "node_modules/", "types/", "dist/", ".D3V/" ],
 
    "compilerOptions": {
-      // ECMAS SPEC
       "lib": ["ES2022"],
-
-      // PROJECT DIRS
-      "outDir": "dist",
-      "rootDir": "src",
-      "declarationDir": "types",
-
-      // FILES EMITTED
+      "outDir": "dist/",
+      "rootDir": "src/",
+      "declarationDir": "types/",
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true,
       "inlineSources": true,
-
-      // MODULE RESOLUTION
-      "resolveJsonModule": true, // SUPPORT JSON IMPORTS
-
-      // PLUGINS
       "plugins": [{ "name": "typescript-eslint-language-service" }]
    }
 }
