--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,7 +6,9 @@
          "detail": "Prompts user for a JS filepath to execute. If the specified path is valid, Node.js will attempt to execute the file.",
          "command": "node",
          "type": "shell",
-         "args": ["${input:promptUser}"],
+         "args": [
+            "${input:promptUser}"
+         ],
          "icon": {
             "id": "run",
             "color": "terminal.ansiGreen"
@@ -17,7 +19,6 @@
             "group": "exec"
          }
       },
-
       // EXEC: MAIN
       {
          "label": "NODE: Start App",
@@ -35,7 +36,6 @@
             "group": "exec"
          }
       },
-
       {
          "label": "MOCHA: TEST",
          "detail": "Run tests using Mocha's test-runner",
@@ -50,12 +50,10 @@
             "echo": false,
             "showReuseMessage": false,
             "panel": "dedicated",
-            "clear": false,
             "close": false,
             "group": "test"
          }
       },
-
       {
          "label": "TSC: BUILD",
          "detail": "Transpile the current typescript project using the root 'tsconfig.json' file.",
@@ -75,12 +73,11 @@
             "showReuseMessage": false,
             "reveal": "silent",
             "revealProblems": "onProblem",
-            "clear": true,
-            "close": true,
+            "panel": "dedicated",
+            "close": false,
             "group": "build"
          }
       },
-
       {
          "label": "TSC: WATCH",
          "detail": "Watches project for any changes, when a change is detected this task will update the project by transpiling any files that have been modified.",
@@ -88,40 +85,44 @@
          "tsconfig": "tsconfig.json",
          "option": "watch",
          "group": "build",
-         "problemMatcher": ["$tsc-watch"],
+         "problemMatcher": [
+            "$tsc-watch"
+         ],
          "icon": {
             "id": "eye-watch",
-            "color": "terminal.ansiYellow"
+            "color": "terminal.ansiRed"
          },
          "presentation": {
             "echo": false,
             "reveal": "never",
             "panel": "dedicated",
             "showReuseMessage": false,
-            "clear": false,
             "close": false
          }
       },
-
       {
-         "label": "LINT",
+         "label": "ESLint: Lint & Fix",
          "detail": "Lint all source code, and fix any fixable issues",
          "type": "npm",
          "script": "lint",
-         "problemMatcher": ["$tsc", "$eslint-stylish"],
-         "icon": { "id": "wrench", "color": "terminal.ansiYellow" },
+         "problemMatcher": [
+            "$tsc",
+            "$eslint-stylish"
+         ],
+         "icon": {
+            "id": "wrench",
+            "color": "terminal.ansiBlue"
+         },
          "presentation": {
-            "reveal": "never",
-            "revealProblems": "always",
+            "reveal": "silent",
+            "revealProblems": "onProblem",
             "panel": "dedicated",
             "showReuseMessage": false,
-            "clear": true,
-            "close": true,
+            "close": false,
             "group": "eslint"
          }
       }
    ],
-
    "inputs": [
       {
          "id": "promptUser",
