--- a/package.json
+++ b/package.json
@@ -11,15 +11,6 @@
    "bugs": {
       "url": "https://github.com/JAYD3V/j-color/issues"
    },
-   "scripts": {
-      "lint": "npx eslint src --fix",
-      "start": "npm run start:main",
-      "start:main": "node dist/main.js",
-      "start:sandbox": "node dist/sandbox.js",
-      "test": "mocha dist/test",
-      "build": "tsc -b tsconfig.json",
-      "build:watch": "tsc -b tsconfig.json --watch"
-   },
    "keywords": [
       "Color",
       "Conversion",
@@ -51,5 +42,14 @@
       "mocha": "^10.0.0",
       "typescript": "^4.7.4",
       "typescript-eslint-language-service": "^5.0.0"
+   },
+    "scripts": {
+      "lint": "npx eslint src --fix",
+      "start": "npm run start:main",
+      "start:main": "node dist/main.js",
+      "start:sandbox": "node dist/sandbox.js",
+      "test": "mocha dist/test/exec.test.js",
+      "build": "tsc -b tsconfig.json",
+      "build:watch": "tsc -b tsconfig.json --watch"
    }
 }
