build: :truck: Changes the structure of the build, updated tsconfig accordingly
Moved tests outside of the "src" directory, conrigured the "test" dir as a second root in the "tsconfig.json" configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,13 +2,13 @@
    "$schema": "https://json.schemastore.org/tsconfig",
    "extends": "@tsconfig/node16-strictest/tsconfig.json",
 
-   "include": ["src/**/*"],
+   "include": ["src/**/*", "test/**/*", "dist/lib/hsvToRgb-Assertion.ts"],
    "exclude": [ "node_modules/", "types/", "dist/", ".D3V/" ],
 
    "compilerOptions": {
       "lib": ["ES2022"],
       "outDir": "dist/",
-      "rootDir": "src/",
+      "rootDirs": ["src/", "test/"],
       "declarationDir": "types/",
       "declaration": true,
       "declarationMap": true,
