--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
       "typescript-eslint-language-service": "^5.0.0"
    },
     "scripts": {
-      "lint": "npx eslint src --fix",
+      "eslint": "npx eslint src --fix",
       "start": "npm run start:main",
       "start:main": "node dist/main.js",
       "start:sandbox": "node dist/sandbox.js",
-      "test": "mocha dist/test/exec.test.js",
+      "test": "node --test dist/test",
       "build": "tsc -b tsconfig.json",
       "build:watch": "tsc -b tsconfig.json --watch"
    }
