--- a/package.json
+++ b/package.json
@@ -40,10 +40,9 @@
       "@typescript-eslint/parser": "^5.30.7",
       "eslint": "^8.20.0",
       "mocha": "^10.0.0",
-      "typescript": "^4.7.4",
-      "typescript-eslint-language-service": "^5.0.0"
+      "typescript": "^4.7.4"
    },
-    "scripts": {
+   "scripts": {
       "eslint": "npx eslint src --fix",
       "start": "npm run start:main",
       "start:main": "node dist/main.js",
