--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,6 @@
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true,
-      "inlineSources": true,
-      "plugins": [{ "name": "typescript-eslint-language-service" }]
+      "inlineSources": true
    }
 }
