--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -88,7 +88,7 @@
                 "panel": "new",
                 "reveal": "never",
                 "close": true,
-                "clear": true,
+                "clear": true
             }
         },
         {
@@ -119,7 +119,10 @@
             "detail": "Runs all test using the Node.js built-in test-runner",
             "type": "npm",
             "script": "test",
-            "group": { "kind": "test", "isDefault": true },
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
             "icon": {
                 "id": "beaker",
                 "color": "terminal.ansiYellow"
@@ -130,6 +133,22 @@
                 "close": false,
                 "showReuseMessage": false,
                 "group": "test"
+            }
+        },
+
+        {
+            "label":  "ESLint | Run Script",
+            "type":   "npm",
+            "script": "eslint",
+            "detail": "Lint source code & test directory",
+            "icon": {"id": "wrench", "color": "terminal.ansiBlue"},
+            "presentation": {
+                "reveal": "silent",
+                "revealProblems": "onProblem",
+                "focus": false,
+                "panel": "shared",
+                "showReuseMessage": false,
+                "close": false
             }
         }
     ]
