--- a/package.json
+++ b/package.json
@@ -38,13 +38,12 @@
       "@types/node": "^18.0.6",
       "@typescript-eslint/eslint-plugin": "^5.30.7",
       "@typescript-eslint/parser": "^5.30.7",
-      "eslint": "^8.20.0",
+      "eslint": "^8.21.0",
       "mocha": "^10.0.0",
       "typescript": "^4.7.4"
    },
-
    "scripts": {
-      "eslint": "npx eslint test src --fix",
+      "eslint": "npx eslint ./src/**/*.ts ./test/**/*.test.ts --fix",
       "start": "npm run start:main",
       "start:main": "node dist/main.js",
       "start:sandbox": "node dist/sandbox.js",
