--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,9 @@
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true,
-      "inlineSources": true
+      "inlineSources": true,
+      // The checks below can be preformed by ESLint &/or TSC
+      "noUnusedLocals": false,
+      "noUnusedParameters": false
    }
 }
