--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,12 +69,17 @@
 
                         * SPACING RULES *
         ________________________________________________ */
-        "object-curly-spacing": "warn",
         "block-spacing": "warn",
         "array-bracket-spacing": ["warn", "never"],
         "space-in-parens": ["warn", "never"],
         "func-call-spacing": ["warn", "never"],
         "arrow-spacing": "warn",
+        "object-curly-spacing": "off",
+        "@typescript-eslint/object-curly-spacing": [
+            "warn",
+            "always",
+            { "arraysInObjects": false, "objectsInObjects": false }
+        ],
         "key-spacing": [
             "warn",
             { "align": { "beforeColon": true, "afterColon": true } }
@@ -103,7 +108,7 @@
 
         // PAIR (don't separate): "space-before-function-paren"
         "space-before-function-paren": "off",
-        "@typescript-eslint/space-before-function-paren": "warn",
+        "@typescript-eslint/space-before-function-paren": ["warn", "never"],
         /*
 
         ________________________________________________
