--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,9 +7,9 @@
 
    "compilerOptions": {
       "lib": ["ES2022"],
-      "outDir": "dist/",
+      "outDir": "dist",
       "rootDir": "src",
-      "declarationDir": "types/",
+      "declarationDir": "types",
       "declaration": true,
       "declarationMap": true,
       "sourceMap": true,
