--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,19 @@
 
     "rules": {
         /*
+        ____________________________________________________
+
+
+
+            * OFF WHILE PROJECT IS UNDER DEVELOPMENT *
+          (should be enabled once project is in production)
+
+        ____________________________________________________ */
+        "no-unused-vars": "off",
+        "no-unreachable": "off",
+        "prefer-const": "off",
+
+        /*
         _______________________________________________
 
 
@@ -119,8 +132,6 @@
 
         "padding-line-between-statements": [
             "warn",
-
-
             {
                 "blankLine": "always",
                 "prev": ["*"],
@@ -136,21 +147,17 @@
                 "prev": "*",
                 "next": "return"
             },
-
             {
                 "blankLine": "always",
                 "prev": ["const", "let", "var"],
                 "next": "*"
             },
-
             {
                 "blankLine": "any",
 
                 "prev": ["const", "let", "var"],
                 "next": ["const", "let", "var"]
             }
-
-
         ],
 
         "curly": "warn",
@@ -161,30 +168,38 @@
 
                     * BARRED SYNTAX USES *
         ______________________________________________ */
+        // Barred Syntax @ Level: "ERROR"
         "no-dupe-keys": "error",
+        "no-dupe-args": "error",
+        "no-dupe-class-members": "error",
         "no-global-assign": "error",
         "no-duplicate-case": "error",
         "no-extra-semi": "error",
         "no-tabs": "error",
         "no-const-assign": "error",
+        "no-eval": "error",
+        "no-var": "error",
+        "no-throw-literal": "error",
+
+
+        // Barred Syntax @ Level: "WARN"
+        /* ___________________________________________
+
+
+           * LESS-DANGEROUS UNDESIRABLE SYNTAX USES *
+        ______________________________________________ */
         "no-multiple-empty-lines": ["warn", { "max": 8 }],
         "no-buffer-constructor": "warn",
         "no-caller": "warn",
         "no-case-declarations": "warn",
-        "no-debugger": "warn",
         "no-duplicate-imports": "warn",
-        "no-eval": "warn",
         "no-async-promise-executor": "warn",
         "no-new-wrappers": "warn",
-        "no-redeclare": "off",
         "no-sparse-arrays": "warn",
-        "no-throw-literal": "warn",
         "no-unsafe-finally": "warn",
         "no-unused-labels": "warn",
-        "no-var": "warn",
         "no-constructor-return": "warn",
         "no-else-return": "warn",
-        "no-spaced-func": "warn",
         "no-trailing-spaces": "warn",
 
         // TS-ESLint Barred Rules
@@ -197,7 +212,7 @@
         ],
 
         "eqeqeq": "warn",
-        "prefer-const": "warn",
+
         /**
 
 
