--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -76,7 +76,7 @@
             "command": "rm",
             "args": [
                 "-rvf",
-                "${workspaceFolder}/dist",
+                "${workspaceFolder}/out",
                 "${workspaceFolder}/types"
             ],
             "group": "build",
