--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "inlineSourceMap": true,
       "inlineSources": true,
       "noUnusedLocals": false,
-      "noUnusedParameters": false
+      "noUnusedParameters": false,
+      "noFallthroughCasesInSwitch": false
    }
 }
