:heavy_plus_sign: Added (test, class) :heavy_plus_sign: Added test & class for hexColor

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -64,7 +64,8 @@
                 "ObjectExpression": "first",
                 "CallExpression": { "arguments": 2 },
                 "FunctionExpression": { "parameters": "first" },
-                "FunctionDeclaration": { "parameters": "first" }
+                "FunctionDeclaration": { "parameters": "first" },
+                "SwitchCase": 1
             }
         ],
         /*
